--- a/styles.css
+++ b/styles.css
@@ -55,8 +55,8 @@ button{
 
 #remote-video{
     top: 0;
-    height: 150;
-    width: 300;
+    height: 100%;
+    width: 100%;
     left: 0;
     background-color: lightgray;
     position: absolute;
